# Practicas11_IB_EmiREstGon

./: CMakeLists.txt
1.Fechas/: fecha.cc  fecha.h  fechas.cc  fechas.h
2.Complejos/: complejo.cc  complejo.h  complejos.cc  complejos.h
3.Racional/: racional.cc  racional.h  racionales.cc  racionales.h
practicas/Practicas11_IB_EmiREstGon/: README.md
practicas/Practicas11_IB_EmiREstGon/1.Fechas/: fecha.cc  fecha.h
practicas/Practicas11_IB_EmiREstGon/2.Complejos/: complejo.cc  complejo.h
practicas/Practicas11_IB_EmiREstGon/3.Racional/: racional.cc  racional.h  racionales.cc  racionales.h
